// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 分钟视图 1`] = `
<div
  className="sc-bdnylx kzDLEo"
>
  <div
    className="sc-gtssRu hPKbEG sinoui-clock__pointer-minute-dot"
  />
</div>
`;

exports[`快照测试 时钟视图 1`] = `
<div
  className="sc-bdnylx eAeEDI"
>
  <div
    className="sc-gtssRu hPKbEG sinoui-clock__pointer-minute-dot"
  />
</div>
`;
